--- a/index.html
+++ b/index.html
@@ -1,1 +1,100 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ieti Lolo | Jnr Full-Stack Web Developer</title>
+
+  <!-- TailwindCSS -->
+  <link rel="stylesheet" href="./css/styles.css">
+
+</head>
+
+<body class="grid">
+
+  <!-- Header -->
+  <header class=" md:flex">
+    <div class="min-h-screen flex flex-col justify-between items-center md:items-start p-10 md:p-20 lg:w-3/5">
+      <div class="flex flex-col items-center md:items-start">
+        <h1 class=" text-3xl relative">
+          <span
+            class="absolute text-2xl lg:text-3xl font-kaushan opacity-20 translate-x-[-40px] translate-y-[-15px] z-[-1] rotate-[-15deg]">Talofa
+            Lava</span>Hello,
+          I'm <span class="font-semibold">Ieti Lolo</span>
+        </h1>
+        <p class="mb-10 relative">Junior Full-Stack Web Developer
+          <span
+            class="absolute text-2xl lg:text-3xl font-kaushan opacity-20 translate-x-[-20px] translate-y-[-15px] rotate-[20deg]">KiaOra</span>
+        </p>
+        <p class="text-center text-lg md:text-left lg:w-3/5 mb-10">Problem Solver. Quick Learner. Creative Thinker. In
+          2018, I
+          enrolled
+          at Vision College in East Tamaki to study Web Design and took my first steps towards becoming a web developer
+        </p>
+        <div class="flex flex-col md:flex-row gap-4" id="header-btn-group">
+          <button class="bg-darkblue px-7 py-2 text-white" data-button="contact">Contact me</button>
+          <a class=" text-center px-7 py-2 border-2 border-darkblue text-darkblue"
+            href="./files/Ieti lolo CV - 2022.pdf">View CV</a>
+        </div>
+      </div>
+      <img class="w-[400px]" src="./img/languages.jpg" alt="Languages">
+    </div>
+    <div id="header-bg-right" class=" hidden lg:block lg:h-full lg:w-2/5">
+    </div>
+  </header>
+
+  <!-- Projects -->
+  <section class="min-h-screen bg-darkblue px-10 py-20 lg:p-20 flex flex-col justify-center items-center font-poppins">
+    <h2 class=" text-white text-4xl mb-5 font-semibold">My Projects</h2>
+    <p class=" md:w-2/3 xl:w-1/3 text-center mb-20 text-slate-100">The following projects have been coded and designed
+      by me
+      (with a
+      little help from TailwindCSS). For more details please
+      refer to my Github or contact me below</p>
+    <div class="projects grid md:grid-cols-2 lg:grid-cols-3 gap-10 w-full">
+      <div
+        class="bg-project-1 bg-cover bg-center box fill w-full h-[300px] lg:h-[250px] xl:h-[400px] shadow bg-white overflow-hidden rounded-sm relative">
+        <div
+          class="project-info w-full h-full transition-opacity ease-in-out duration-750 opacity-0 hover:opacity-100 bg-gray-800/90 absolute flex flex-col justify-center items-center p-2 rounded-sm pt-4">
+          <p class="text-white mb-4">Digital Clock V1</p>
+          <a href="#"><img src="./img/GitHub-Mark-Light-64px.png" alt="Github Logo"></a>
+        </div>
+      </div>
+      <div
+        class="bg-project-2 bg-cover bg-center box w-full h-[300px] lg:h-[250px] xl:h-[400px] shadow bg-white overflow-hidden rounded-sm relative">
+        <div
+          class="project-info w-full h-full transition-opacity ease-in-out duration-750 opacity-0 hover:opacity-100 bg-gray-800/90 absolute flex flex-col justify-center items-center p-2 rounded-sm pt-4">
+          <p class="text-white mb-4">ExpressJS Blog V1</p>
+          <a href="#"><img src="./img/GitHub-Mark-Light-64px.png" alt="Github Logo"></a>
+        </div>
+      </div>
+      <div
+        class="bg-project-3 bg-cover bg-center box w-full h-[300px] lg:h-[250px] xl:h-[400px] shadow bg-white overflow-hidden rounded-sm relative">
+        <div
+          class="project-info w-full h-full transition-opacity ease-in-out duration-750 opacity-0 hover:opacity-100 bg-gray-800/90 absolute flex flex-col justify-center items-center p-2 rounded-sm pt-4">
+          <p class="text-white mb-4">EvoFanPage V1</p>
+          <a href="#"><img src="./img/GitHub-Mark-Light-64px.png" alt="Github Logo"></a>
+        </div>
+      </div>
+    </div>
+  </section><!-- Projects -->
+
+  <!-- Contact -->
+  <section data-scroll="contact" class="min-h-screen p-10 flex flex-col justify-center items-center">
+    <h3 class="text-4xl mb-5 font-semibold text-darkblue">Contact Me</h3>
+    <p class=" text-center lg:w-1/2">Unfortunately, because I’m using Github Pages (Static website) I’m unable to use a
+      real
+      contact form. However, you can still reach me through one of the links listed. Cheers :)</p>
+    <p class="mt-4 text-darkblue font-semibold">
+      <img src="./img/akar-icons_phone.svg" alt="Phone icons" class="inline-block w-8 mr-4"><a
+        href="tel:642237665880">(64) 022-376-5880</a>
+    </p>
+  </section>
+
+  <script src="./js/script.js"></script>
+</body>
+
+</html>
