--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div
           class="project-info w-full h-full transition-opacity ease-in-out duration-750 opacity-0 hover:opacity-100 bg-gray-800/90 absolute flex flex-col justify-center items-center p-2 rounded-sm pt-4">
           <p class="text-white mb-4">ExpressJS Blog V1</p>
-          <a href="#"><img src="./img/GitHub-Mark-Light-64px.png" alt="Github Logo"></a>
+          <a href="https://ietilolo-blog.herokuapp.com/"><img src="./img/GitHub-Mark-Light-64px.png" alt="Github Logo"></a>
         </div>
       </div>
       <div
