--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ieti Lolo | Jnr Full-Stack Web Developer</title>
+  <title>Ieti Lolo | Jnr Full-Stack Web Developer 2022</title>
 
   <!-- TailwindCSS -->
   <link rel="stylesheet" href="./css/styles.css">
@@ -60,7 +60,8 @@
         <div
           class="project-info w-full h-full transition-opacity ease-in-out duration-750 opacity-0 hover:opacity-100 bg-gray-800/90 absolute flex flex-col justify-center items-center p-2 rounded-sm pt-4">
           <p class="text-white mb-4">Digital Clock V1</p>
-          <a href="https://github.com/jedidiahlolo/digital-clock"><img src="./img/GitHub-Mark-Light-64px.png" alt="Github Logo"></a>
+          <a href="https://github.com/jedidiahlolo/digital-clock"><img src="./img/GitHub-Mark-Light-64px.png"
+              alt="Github Logo"></a>
         </div>
       </div>
       <div
@@ -68,7 +69,8 @@
         <div
           class="project-info w-full h-full transition-opacity ease-in-out duration-750 opacity-0 hover:opacity-100 bg-gray-800/90 absolute flex flex-col justify-center items-center p-2 rounded-sm pt-4">
           <p class="text-white mb-4">ExpressJS Blog V1</p>
-          <a href="https://ietilolo-blog.herokuapp.com/"><img src="./img/GitHub-Mark-Light-64px.png" alt="Github Logo"></a>
+          <a href="https://ietilolo-blog.herokuapp.com/"><img src="./img/GitHub-Mark-Light-64px.png"
+              alt="Github Logo"></a>
         </div>
       </div>
       <div
@@ -76,7 +78,8 @@
         <div
           class="project-info w-full h-full transition-opacity ease-in-out duration-750 opacity-0 hover:opacity-100 bg-gray-800/90 absolute flex flex-col justify-center items-center p-2 rounded-sm pt-4">
           <p class="text-white mb-4">EvoFanPage V1</p>
-          <a href="https://github.com/jedidiahlolo/project-mitz"><img src="./img/GitHub-Mark-Light-64px.png" alt="Github Logo"></a>
+          <a href="https://github.com/jedidiahlolo/project-mitz"><img src="./img/GitHub-Mark-Light-64px.png"
+              alt="Github Logo"></a>
         </div>
       </div>
     </div>
